--- a/overlay/device/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/device/frameworks/base/core/res/res/values/config.xml
@@ -25,6 +25,13 @@
     <dimen name="status_bar_height_portrait">120.0px</dimen>
     <string name="config_mms_user_agent">motog5gplus</string>
     <string name="wifi_tether_configure_ssid_default">moto g 5G plus</string>
-    <string name="config_mainBuiltInDisplayCutout">M-416.5,33L-319.5,33A38.5,38.5 0,0 1,-281 71.5L-281,71.5A38.5,38.5 0,0 1,-319.5 110L-416.5,110A38.5,38.5 0,0 1,-475 71.5L-475,71.5A38.5,38.5 0,0 1,-416.5 33z M -475,0 L -283,0 Z M -540,0 L -540,113 Z</string>
+    <string name="config_mainBuiltInDisplayCutout">
+        M 0, 0
+        H 245
+        V 100
+        H 0
+        L 0, 0
+        @left
+    </string>
 
 </resources>
